# qfract

./: Cargo.toml  LICENCE  README.md  setup.cfg  setup.py
examples/: image.py  light.py  simple_explorer.py  zoom.py
qfract/: __init__.py  tools.py
src/: lib.rs  main.rs  tools.rs
