[package]
name = "rust_ext"
version = "0.1.0"
authors = ["konstin <konstin@mailbox.org>"]
edition = "2018"

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.15"
ndarray = "0.15"

tendril = "0.4.2"
itertools-num = "0.1.3"
num-complex = "0.4"
image = '0.23.14'
rayon = "1.5"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]
