[metadata]
name = qfract
version = 0.0.1
license = MIT
url = https://github.com/PyO3/setuptools-rust/blob/main/examples/html-py-ever
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
[options]
packages = qfract
zip_safe = False
setup_requires = setuptools-rust >= 0.12.1;
python_requires = >=3.7
include_package_data = True
